test/accept/test13.imgine
// This program should not work in the future

image watermark = image("path/to/watermark.png");
image image_1 = image("path/to/image_1.jpg");
image image_2 = image("path/to/image_2.tiff");
image image_3 = image("path/to/image_3");

watermark.apply(filter().parameter(opacity=0.5));

for im in set(image1324, image("123"), imagen_inexistente) {
    im.overlap(watermark, position=9);
    im.save();
}